Migrate Active Storage database for uploading pictures

--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -6,5 +6,6 @@
  - mailers
 :schedule:
   first:
-    cron: '0 * * * * *'   # Runs once per minute
+    cron: '0 * * * * *'   # Every minute
+    #cron: '0 5 * * 1'   # Every monday of the week
     class: 'EWorker'
