--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,7 @@ rvm:
   - 2.5.1
 
 script:
-  - rake db:setup
-  - rake db:migrate
-  - rake db:seed
+  - bundle exec rake db:setup
 
 notifications:
   slack: false
