Change the db schema

--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -6,6 +6,7 @@
  - mailers
 :schedule:
   first:
-    cron: '0 * * * * *'   # Every minute
+    #cron: '0 * * * * *'   #Every minute
+    cron: '*/5 * * * *'   # Every 5 minutes
     #cron: '0 5 * * 1'   # Every monday of the week
     class: 'EWorker'
